fixed footer z-index

--- a/components/layout/Footer/Footer.module.scss
+++ b/components/layout/Footer/Footer.module.scss
@@ -11,6 +11,7 @@
     text-align: center;
     position: relative;
     overflow: hidden;
+    z-index: 0;
 
     .main {
         display: flex;
